--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/resources/templates/template.xhtml"
                 xml:lang="en" lang="en">
@@ -9,6 +7,8 @@
     <ui:define name="content">
         <br/>
         <h1>Zotteltec - Onlineshop</h1>
+        <ui:fragment rendered="#{customerSessionJSF.authenticated eq true}">
+            <p>alksdjflkajsfdlkjaslkdfjlaskjfkljdf</p>
+        </ui:fragment>
     </ui:define>
-
 </ui:composition>
