add messages, bugfix

--- a/web/src/main/webapp/login.xhtml
+++ b/web/src/main/webapp/login.xhtml
@@ -17,21 +17,28 @@
             <div class="card-body">
                 <div class="card shadow">
                     <div class="card-body">
-                        <h:form id="customerRegisterForm" prependId="false">
+                        <h:form id="customerLoginForm">
+                            <h:message for="customerLoginForm" class="text-danger" />
                             <div class="form-group">
-                                <label for="forUsername">Username</label>
-                                <h:inputText binding="#{logUsernameInput}" class="forUsername form-control" id="forUsername"
-                                             maxlength="255" required="true" />
+                                <label for="username">Username</label>
+                                <h:inputText binding="#{logUsernameInput}" class="forUsername form-control"
+                                             id="username"
+                                             maxlength="255"
+                                             required="true"
+                                             requiredMessage="#{messageJSF.requiredMassage}" />
+                                <h:message for="username" class="text-danger" />
                             </div>
                             <div class="form-group">
-                                <label for="forPassword">Password</label>
-                                <h:inputSecret binding="#{logPasswordInput}" class="regPasswordInput form-control" id="forPassword"
-                                               maxlength="255" required="true" />
+                                <label for="password">Password</label>
+                                <h:inputSecret binding="#{logPasswordInput}" class="regPasswordInput form-control"
+                                               id="password"
+                                               maxlength="255"
+                                               required="true"
+                                               requiredMessage="#{messageJSF.requiredMassage}" />
+                                <h:message for="password" class="text-danger" />
                             </div>
                             <h:commandButton value="Login" class="btn btn-primary"
-                                             actionListener="#{customerSessionJSF.login(logUsernameInput.value, logPasswordInput.value)}">
-                                <f:ajax execute="customerRegisterForm"/>
-                            </h:commandButton>
+                                             actionListener="#{customerSessionJSF.login(logUsernameInput.value, logPasswordInput.value)}"/>
                         </h:form>
                     </div>
                 </div>
