--- a/web/src/main/webapp/register.xhtml
+++ b/web/src/main/webapp/register.xhtml
@@ -17,33 +17,59 @@
             <div class="card-body">
                 <div class="card shadow">
                     <div class="card-body">
-                        <h:form id="customerRegisterForm" prependId="false">
+                        <h:form id="customerRegisterForm">
+                            <h:message for="customerRegisterForm" class="text-danger" />
                             <div class="form-group">
-                                <label for="forUsername">Username</label>
-                                <h:inputText binding="#{regUsernameInput}" class="forUsername form-control" id="forUsername"
-                                             maxlength="255" required="true" />
+                                <label for="username">Username</label>
+                                <h:inputText binding="#{regUsernameInput}"
+                                             class="forUsername form-control"
+                                             id="username"
+                                             maxlength="255"
+                                             required="true"
+                                             requiredMessage="#{messageJSF.requiredMassage}" />
+                                <h:message for="username" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="forFirstname">Firstname</label>
-                                <h:inputText binding="#{regFirstnameInput}" class="regFirstnameInput form-control" id="forFirstname"
-                                             maxlength="255" required="true" />
+                                <label for="firstname">Firstname</label>
+                                <h:inputText binding="#{regFirstnameInput}"
+                                             class="regFirstnameInput form-control"
+                                             id="firstname"
+                                             maxlength="255" required="true"
+                                             requiredMessage="#{messageJSF.requiredMassage}" />
+                                <h:message for="firstname" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="forLastname">Lastname</label>
-                                <h:inputText binding="#{regLastnameInput}" class="regLastnameInput form-control" id="forLastname"
-                                             maxlength="255" required="true" />
+                                <label for="lastname">Lastname</label>
+                                <h:inputText binding="#{regLastnameInput}"
+                                             class="regLastnameInput form-control"
+                                             id="lastname"
+                                             maxlength="255"
+                                             required="true"
+                                             requiredMessage="#{messageJSF.requiredMassage}"/>
+                                <h:message for="lastname" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="forEmail">Email</label>
-                                <h:inputText binding="#{regEmailInput}" class="regEmailInput form-control" id="forEmail"
-                                             maxlength="255" required="true">
-                                <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-.]+\.[a-zA-Z0-9-.]+$" for="forEmail" />
+                                <label for="email">Email</label>
+                                <h:inputText binding="#{regEmailInput}"
+                                             class="regEmailInput form-control"
+                                             id="email"
+                                             maxlength="255"
+                                             required="true"
+                                             requiredMessage="#{messageJSF.requiredMassage}"
+                                             validatorMessage="#{messageJSF.emailMessage}">
+                                    <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-.]+\.[a-zA-Z0-9-.]+$" for="email" />
                                 </h:inputText>
+                                <h:message for="email" class="text-danger"/>
                             </div>
                             <div class="form-group">
-                                <label for="forPassword">Password</label>
-                                <h:inputSecret binding="#{regPasswordInput}" class="regPasswordInput form-control" id="forPassword"
-                                               maxlength="255" required="true" />
+                                <label for="password">Password</label>
+                                <h:inputSecret binding="#{regPasswordInput}"
+                                               class="regPasswordInput form-control"
+                                               id="password"
+                                               maxlength="255"
+                                               required="true"
+                                               requiredMessage="#{messageJSF.requiredMassage}" />
+                                <h:message for="password" class="text-danger"/>
                             </div>
                             <h:commandButton value="Register" class="btn btn-primary"
                                              actionListener="#{customerJSF.addNewCustomer(
@@ -51,9 +77,7 @@
                                                     regFirstnameInput.value,
                                                     regLastnameInput.value,
                                                     regEmailInput.value,
-                                                    regPasswordInput.value)}">
-                                <f:ajax execute="customerRegisterForm"/>
-                            </h:commandButton>
+                                                    regPasswordInput.value)}" />
                         </h:form>
                     </div>
                 </div>
