success alert, fix change user

--- a/web/src/main/webapp/register.xhtml
+++ b/web/src/main/webapp/register.xhtml
@@ -22,7 +22,7 @@
                             <div class="form-group">
                                 <label for="username">Username</label>
                                 <h:inputText binding="#{regUsernameInput}"
-                                             class="forUsername form-control"
+                                             class="form-control"
                                              id="username"
                                              maxlength="255"
                                              required="true"
@@ -32,7 +32,7 @@
                             <div class="form-group">
                                 <label for="firstname">Firstname</label>
                                 <h:inputText binding="#{regFirstnameInput}"
-                                             class="regFirstnameInput form-control"
+                                             class="form-control"
                                              id="firstname"
                                              maxlength="255" required="true"
                                              requiredMessage="#{messageJSF.requiredMassage}" />
@@ -41,7 +41,7 @@
                             <div class="form-group">
                                 <label for="lastname">Lastname</label>
                                 <h:inputText binding="#{regLastnameInput}"
-                                             class="regLastnameInput form-control"
+                                             class="form-control"
                                              id="lastname"
                                              maxlength="255"
                                              required="true"
@@ -51,7 +51,7 @@
                             <div class="form-group">
                                 <label for="email">Email</label>
                                 <h:inputText binding="#{regEmailInput}"
-                                             class="regEmailInput form-control"
+                                             class="form-control"
                                              id="email"
                                              maxlength="255"
                                              required="true"
@@ -64,7 +64,7 @@
                             <div class="form-group">
                                 <label for="password">Password</label>
                                 <h:inputSecret binding="#{regPasswordInput}"
-                                               class="regPasswordInput form-control"
+                                               class="form-control"
                                                id="password"
                                                maxlength="255"
                                                required="true"
