--- a/web/src/main/webapp/customer_profile.xhtml
+++ b/web/src/main/webapp/customer_profile.xhtml
@@ -21,16 +21,17 @@
                                 <h:message for="customerUsernameChangeForm" class="text-danger" />
                                 <div class="form-group">
                                     <label for="username">Username</label>
-                                    <h:inputText binding="#{regUsernameInput}"
-                                                 class="forUsername form-control"
+                                    <h:inputText binding="#{changeUsernameInput}"
+                                                 class="form-control"
                                                  id="username"
                                                  maxlength="255"
                                                  required="true"
-                                                 requiredMessage="#{messageJSF.requiredMassage}" />
+                                                 requiredMessage="#{messageJSF.requiredMassage}"
+                                                 value="#{customerSessionJSF.customer.username}" />
                                     <h:message for="username" class="text-danger"/>
                                 </div>
                                 <h:commandButton value="Change to" class="btn btn-primary"
-                                                 actionListener="#{customerJSF.changeUsername(regUsernameInput.value)}" />
+                                                 actionListener="#{customerJSF.changeUsername(changeUsernameInput.value)}" />
                             </h:form>
                         </div>
                     </div>
@@ -41,41 +42,44 @@
                                 <h:message for="customerChangeForm" class="text-danger" />
                                 <div class="form-group">
                                     <label for="firstname">Firstname</label>
-                                    <h:inputText binding="#{regFirstnameInput}"
-                                                 class="regFirstnameInput form-control"
+                                    <h:inputText binding="#{changeFirstnameInput}"
+                                                 class="form-control"
                                                  id="firstname"
                                                  maxlength="255" required="true"
-                                                 requiredMessage="#{messageJSF.requiredMassage}" />
+                                                 requiredMessage="#{messageJSF.requiredMassage}"
+                                                 value="#{customerSessionJSF.customer.firstname}"/>
                                     <h:message for="firstname" class="text-danger"/>
                                 </div>
                                 <div class="form-group">
                                     <label for="lastname">Lastname</label>
-                                    <h:inputText binding="#{regLastnameInput}"
-                                                 class="regLastnameInput form-control"
+                                    <h:inputText binding="#{changeLastnameInput}"
+                                                 class="changeLastnameInput form-control"
                                                  id="lastname"
                                                  maxlength="255"
                                                  required="true"
-                                                 requiredMessage="#{messageJSF.requiredMassage}" />
+                                                 requiredMessage="#{messageJSF.requiredMassage}"
+                                                 value="#{customerSessionJSF.customer.lastname}"/>
                                     <h:message for="lastname" class="text-danger"/>
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <h:inputText binding="#{regEmailInput}"
-                                                 class="regEmailInput form-control"
+                                    <h:inputText binding="#{changeEmailInput}"
+                                                 class="form-control"
                                                  id="email"
                                                  maxlength="255"
                                                  required="true"
                                                  requiredMessage="#{messageJSF.requiredMassage}"
-                                                 validatorMessage="#{messageJSF.emailMessage}" >
+                                                 validatorMessage="#{messageJSF.emailMessage}"
+                                                 value="#{customerSessionJSF.customer.email}">
                                         <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-.]+\.[a-zA-Z0-9-.]+$" for="email" />
                                     </h:inputText>
                                     <h:message for="email" class="text-danger"/>
                                 </div>
                                 <h:commandButton value="Change to" class="btn btn-primary"
                                                  actionListener="#{customerJSF.changeCustomer(
-                                                        regFirstnameInput.value,
-                                                        regLastnameInput.value,
-                                                        regEmailInput.value)}" />
+                                                        changeFirstnameInput.value,
+                                                        changeLastnameInput.value,
+                                                        changeEmailInput.value)}" />
                             </h:form>
                         </div>
                     </div>
@@ -86,8 +90,8 @@
                                 <h:message for="customerChangePassordForm" class="text-danger" />
                                 <div class="form-group">
                                     <label for="oldPassword">Old Password</label>
-                                    <h:inputSecret binding="#{regOldPasswordInput}"
-                                                   class="regPasswordInput form-control"
+                                    <h:inputSecret binding="#{changeOldPasswordInput}"
+                                                   class="form-control"
                                                    id="oldPassword"
                                                    maxlength="255"
                                                    required="true"
@@ -95,9 +99,9 @@
                                     <h:message for="oldPassword" class="text-danger"/>
                                 </div>
                                 <div class="form-group">
-                                    <label for="newPassword">New Passord</label>
-                                    <h:inputSecret binding="#{regNewPasswordInput}"
-                                                   class="regPasswordInput form-control"
+                                    <label for="newPassword">New Password</label>
+                                    <h:inputSecret binding="#{changeNewPasswordInput}"
+                                                   class="regNewPasswordInput form-control"
                                                    id="newPassword"
                                                    maxlength="255"
                                                    required="true"
@@ -105,7 +109,7 @@
                                     <h:message for="newPassword" class="text-danger"/>
                                 </div>
                                 <h:commandButton value="Change to" class="btn btn-primary"
-                                                 actionListener="#{customerJSF.changePassword(oldPassowrd.value, newPassword.value)}" />
+                                                 actionListener="#{customerJSF.changePassword(changeOldPasswordInput.value, changeNewPasswordInput.value)}" />
                             </h:form>
                         </div>
                     </div>
