--- a/web/src/main/webapp/customer_overviewproduct.xhtml
+++ b/web/src/main/webapp/customer_overviewproduct.xhtml
@@ -22,19 +22,28 @@
                                 <tr>
                                     <th scope="col">Title</th>
                                     <th scope="col">Price</th>
-                                    <th scope="col">Action</th>
+                                    <th scope="col">Buyer</th>
+                                    <th scope="col">Sold</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <c:forEach items="#{productJSF.productsBySeller}" var="product" varStatus="metadata">
                                     <tr class="align-middle">
-                                        <td class="align-middle">#{product.title}</td>
+                                        <td class="align-middle"><a href="customer_changeproduct.xhtml" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
                                         <td class="align-middle">#{product.price}</td>
+                                        <td class="align-middle">TODO</td>
+                                        <td class="align-middle">TODO</td>
                                     </tr>
                                 </c:forEach>
                                 </tbody>
                             </table>
                         </h:form>
+                    </div>
+                </div>
+                <br/>
+                <div class="card shadow">
+                    <div class="card-body">
+                        <a href="customer_createproduct.xhtml" class="btn btn-primary">Create new product</a>
                     </div>
                 </div>
             </div>
