--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:c="http://java.sun.com/jsp/jstl/core"
                 xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/resources/templates/template.xhtml"
                 xml:lang="en" lang="en">
 
@@ -11,13 +11,13 @@
         <h1>Zotteltec - Onlineshop</h1>
         <hr/>
         <div class="row">
-            <div class="col-sm-6        ">
+            <div class="col-sm-6">
                 <h:form>
                     <c:forEach items="#{productJSF.all}" var="product" varStatus="metadata">
                         <div class="card">
                             <h:graphicImage class="card-img-top" url="image?id=#{product.id}"/>
                             <div class="card-body">
-                                <h5 class="card-title">#{product.title}</h5>
+                                <h5 class="card-title">#{product.title} : #{product.id}</h5>
                                 <p class="card-text">#{product.description}</p>
                                 <a href="#" class="btn btn-primary">Buy</a>
                             </div>
