--- a/web/src/main/webapp/customer_createproduct.xhtml
+++ b/web/src/main/webapp/customer_createproduct.xhtml
@@ -61,7 +61,7 @@
                                 <h:message for="newPhoto" class="text-danger"/>
                             </div>
                             <h:commandButton value="Save" class="btn btn-primary"
-                                             actionListener="#{productJSF.saleNewProduct(
+                                             action="#{productJSF.saleNewProduct(
                                                     newTitleInput.value,
                                                     newDescriptionInput.value,
                                                     newPriceInput.value,
