--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -15,6 +15,7 @@
                 <h:form>
                     <c:forEach items="#{productJSF.all}" var="product" varStatus="metadata">
                         <div class="card">
+                            <img class="card-img-top" src="image?id=#{product.id.value}"/>
                             <h:graphicImage class="card-img-top" url="image2?id=#{product.id}"/>
                             <div class="card-body">
                                 <h5 class="card-title">#{product.title}</h5>
