--- a/web/src/main/webapp/customer_overview.xhtml
+++ b/web/src/main/webapp/customer_overview.xhtml
@@ -29,7 +29,7 @@
                                 <tbody>
                                 <c:forEach items="#{productJSF.productsBySeller}" var="product" varStatus="metadata">
                                     <tr class="align-middle">
-                                        <td class="align-middle"><a href="customer_changeproduct.xhtml" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
+                                        <td class="align-middle"><a href="customer_product.xhtml" class="font-weight-bold text-decoration-none">#{product.title}</a></td>
                                         <td class="align-middle">#{product.price}</td>
                                         <td class="align-middle">TODO</td>
                                         <td class="align-middle">TODO</td>
@@ -43,7 +43,7 @@
                 <br/>
                 <div class="card shadow">
                     <div class="card-body">
-                        <a href="customer_createproduct.xhtml" class="btn btn-primary">Create new product</a>
+                        <a href="customer_product.xhtml" class="btn btn-primary">New Prodcut</a>
                     </div>
                 </div>
             </div>
