--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -10,24 +10,24 @@
         <br/>
         <h1>Zotteltec - Onlineshop</h1>
         <hr/>
-        <div class="row">
-            <div class="col-sm-6">
-                <h:form>
-                    <c:forEach items="#{productJSF.all}" var="product" varStatus="metadata">
-                        <div class="card">
-                            <img class="card-img-top" src="image?id=#{product.id.value}"/>
-                            <h:graphicImage class="card-img-top" url="image2?id=#{product.id}"/>
-                            <div class="card-body">
-                                <h5 class="card-title">#{product.title}</h5>
-                                <p class="card-text">#{product.description}</p>
-                                <c:if test="#{customerSessionJSF.authenticated}">
-                                    <a href="#" class="btn btn-primary">Buy</a>
-                                </c:if>
-                            </div>
+        <div class="card-columns">
+            <h:form>
+                <c:forEach items="#{productJSF.all}" var="product" varStatus="metadata">
+                    <div class="card">
+                        <img class="card-img-top" src="image?id=#{product.id.value}" alt="#{product.title}" />
+                        <div class="card-body">
+                            <h5 class="card-title">#{product.title}</h5>
+                            <p class="card-text text-muted">#{product.price} CHF</p>
+                            <p class="card-text">#{product.description}</p>
+                            <footer class="blockquote-footer">#{product.seller.representation}</footer>
+                            <c:if test="#{customerSessionJSF.authenticated}">
+                                <br/>
+                                <a href="#" class="btn btn-primary">Buy</a>
+                            </c:if>
                         </div>
-                    </c:forEach>
-                </h:form>
-            </div>
+                    </div>
+                </c:forEach>
+            </h:form>
         </div>
     </ui:define>
 </ui:composition>
